# galaxy-tool-recommendation-agent-benchmark

./: .env.example  .gitignore  EVALUATION.md  README.md  batch_review_log_by_codex.md  batch_review_log_by_github_copilot.md  eval_results.md  pyproject.toml
.github/: copilot-instructions.md
data/: tools.tsv  tools_only.json  tutorial_list.yaml  tutorial_list_all_tools.yaml
data/benchmark/: v0_items.jsonl  v1_items.jsonl  v1_items_readable.md
data/tool_catalog/: README.md  usegalaxy_org_all_index.json  usegalaxy_org_by_section.json
examples/: v0_items.jsonl  v0_items_readable.md
gtn_benchmark/: downloader.py  gtn_loader.py  io_utils.py  llm_client.py  models.py  query_generator.py
scripts/: build_tool_catalog.py  export_readable.py  extract_helptext.py  generate_benchmark.py  generate_llm_predictions.py  generate_tutorial_list.py
scripts/benchmark/: generate_llm_predictions.py  generate_manual_queries.py
scripts/catalog/: build_usegalaxy_tool_catalog.py
scripts/eval/: evaluate_recommendations.py  run_v1_agent_eval.py
scripts/helptext_analysis/: README.md  environment.yml  extract_embeddings.py  extract_helptext.py
scripts/helptext_analysis/data/: similar_tools_helptext.tsv  tools_helptext.tsv  tools_helptext_knn.tsv  tools_metadata.tsv  tools_only.json
scripts/llm/: llm_providers.py
skills/galaxy-ground-truth-expansion/: SKILL.md
skills/galaxy-query-guidelines/: SKILL.md
skills/galaxy-query-guidelines/scripts/: check_queries.rb  check_v1_items.rb
slides/: current_workflow.lside  current_workflow.md  current_workflow.pptx  overview.md
(+3 files in other folders)
